@@ -1,11 +1,12 @@
 package com.team09.sb01hrbank09.service;
 
+import com.team09.sb01hrbank09.dto.request.CursorPageRequestEmployeeDto;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.PersistenceContext;
 import java.io.IOException;
-import java.sql.Timestamp;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.time.Year;
-import java.time.ZoneOffset;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -16,7 +17,6 @@ import java.util.stream.Stream;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Lazy;
-import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
@@ -44,332 +44,434 @@ import lombok.extern.slf4j.Slf4j;
 @Slf4j
 public class EmployeeServiceImpl implements EmployeeServiceInterface {
 
-	private final EmployeeRepository employeeRepository;
-	private final DepartmentServiceInterface departmentServiceInterface;
-	private final FileServiceInterface fileServiceInterface;
-	private final ChangeLogServiceInterface changeLogServiceInterface;
-	private final EmployeeMapper employeeMapper;
+  private final EmployeeRepository employeeRepository;
+  private final DepartmentServiceInterface departmentServiceInterface;
+  private final FileServiceInterface fileServiceInterface;
+  private final ChangeLogServiceInterface changeLogServiceInterface;
+  private final EmployeeMapper employeeMapper;
 
-	@Autowired
-	public EmployeeServiceImpl(
-		@Lazy EmployeeRepository employeeRepository,
-		@Lazy DepartmentServiceInterface departmentServiceInterface,
-		@Lazy FileServiceInterface fileServiceInterface,
-		@Lazy ChangeLogServiceInterface changeLogServiceInterface,
-		@Lazy EmployeeMapper employeeMapper) {
-		this.employeeRepository = employeeRepository;
-		this.departmentServiceInterface = departmentServiceInterface;
-		this.fileServiceInterface = fileServiceInterface;
-		this.changeLogServiceInterface = changeLogServiceInterface;
-		this.employeeMapper = employeeMapper;
-	}
+  @Autowired
+  public EmployeeServiceImpl(
+      @Lazy EmployeeRepository employeeRepository,
+      @Lazy DepartmentServiceInterface departmentServiceInterface,
+      @Lazy FileServiceInterface fileServiceInterface,
+      @Lazy ChangeLogServiceInterface changeLogServiceInterface,
+      @Lazy EmployeeMapper employeeMapper) {
+    this.employeeRepository = employeeRepository;
+    this.departmentServiceInterface = departmentServiceInterface;
+    this.fileServiceInterface = fileServiceInterface;
+    this.changeLogServiceInterface = changeLogServiceInterface;
+    this.employeeMapper = employeeMapper;
+  }
 
-	private Instant updateTime = Instant.EPOCH;
+  private Instant updateTime = Instant.EPOCH;
 
-	@Override
-	@Transactional
-	public EmployeeDto creatEmployee(EmployeeCreateRequest employeeCreateRequest, MultipartFile profileImg,
-		String ipAddress) throws
-		IOException {
-		Department usingDepartment = departmentServiceInterface.findDepartmentEntityById(
-			employeeCreateRequest.departmentId());
-		if (usingDepartment == null) {
-			throw new NoSuchElementException("Department 아이디가 존재하지 않음");
-		}
+  @Override
+  @Transactional
+  public EmployeeDto creatEmployee(EmployeeCreateRequest employeeCreateRequest,
+      MultipartFile profileImg,
+      String ipAddress) throws
+      IOException {
+    Department usingDepartment = departmentServiceInterface.findDepartmentEntityById(
+        employeeCreateRequest.departmentId());
+    if (usingDepartment == null) {
+      throw new NoSuchElementException("Department 아이디가 존재하지 않음");
+    }
 
-		File file = null;
-		if (profileImg != null) {
-			file = fileServiceInterface.createImgFile(profileImg);
-		}
+    File file = null;
+    if (profileImg != null) {
+      file = fileServiceInterface.createImgFile(profileImg);
+    }
 
-		String uniquePart = UUID.randomUUID().toString().replaceAll("-", "").substring(0, 14);
-		String employeeNumber = "EMP-" + Year.now().getValue() + "-" + uniquePart;
-		Employee employee = Employee.createEmployee(employeeCreateRequest.name(), employeeCreateRequest.email(),
-			employeeNumber, employeeCreateRequest.position(),
-			employeeCreateRequest.hireDate(), EmployeeStatus.ACTIVE, file, usingDepartment);
+    String uniquePart = UUID.randomUUID().toString().replaceAll("-", "").substring(0, 14);
+    String employeeNumber = "EMP-" + Year.now().getValue() + "-" + uniquePart;
+    Employee employee = Employee.createEmployee(employeeCreateRequest.name(),
+        employeeCreateRequest.email(),
+        employeeNumber, employeeCreateRequest.position(),
+        employeeCreateRequest.hireDate(), EmployeeStatus.ACTIVE, file, usingDepartment);
 
-		//EmployeeDto newEmployee=employeeMapper.employeeToDto(employee);
-		//만들어지면 넣기
-		String memo;
-		if (employeeCreateRequest.memo() == null) {
-			memo = "신규 직원 등록";
-		} else {
-			memo = employeeCreateRequest.memo();
-		}
-		log.info("changelog 생성 시작...");
-		changeLogServiceInterface.createChangeLog(
-			ChangeLogType.CREATED, employee.getEmployeeNumber(), memo, ipAddress, null,
-			employeeMapper.employeeToDto(employee)
-		);
-		log.info("change-logs 생성 완료");
+    String memo;
+    if (employeeCreateRequest.memo() == null) {
+      memo = "신규 직원 등록";
+    } else {
+      memo = employeeCreateRequest.memo();
+    }
+    log.info("changelog 생성 시작...");
+    changeLogServiceInterface.createChangeLog(
+        ChangeLogType.CREATED, employee.getEmployeeNumber(), memo, ipAddress, null,
+        employeeMapper.employeeToDto(employee)
+    );
+    log.info("change-logs 생성 완료");
 
-		usingDepartment.increaseCount();
-		this.updateTime = Instant.now();
-		return employeeMapper.employeeToDto(employeeRepository.save(employee));
-	}
+    usingDepartment.increaseCount();
+    this.updateTime = Instant.now();
+    return employeeMapper.employeeToDto(employeeRepository.save(employee));
+  }
 
-	@Override
-	@Transactional(readOnly = true)
-	public EmployeeDto findEmployeeById(Long Id) {
-		Employee employee = employeeRepository.findById(Id)
-			.orElseThrow(() -> new NoSuchElementException("employee with id " + Id + " not found"));
-		return employeeMapper.employeeToDto(employee);
-	}
+  @Override
+  @Transactional(readOnly = true)
+  public EmployeeDto findEmployeeById(Long Id) {
+    Employee employee = employeeRepository.findById(Id)
+        .orElseThrow(() -> new NoSuchElementException("employee with id " + Id + " not found"));
+    return employeeMapper.employeeToDto(employee);
+  }
 
-	@Override
-	@Transactional(readOnly = true)
-	public CursorPageResponseEmployeeDto findEmployeeList(
-		String nameOrEmail, String employeeNumber, String departmentName, String position,
-		LocalDate hireDateFrom, LocalDate hireDateTo, String status, Long idAfter,
-		Object cursor, int size, String sortField, String sortDirection) {
+  @Override
+  @Transactional(readOnly = true)
+  public CursorPageResponseEmployeeDto findEmployeeList(CursorPageRequestEmployeeDto request) {
 
-		Sort.Direction direction = "desc".equalsIgnoreCase(sortDirection) ? Sort.Direction.DESC : Sort.Direction.ASC;
-		Sort sort = Sort.by(direction, sortField);
+    Sort.Direction direction =
+        "desc".equalsIgnoreCase(request.sortDirection()) ? Sort.Direction.DESC : Sort.Direction.ASC;
+    Sort sort = Sort.by(direction, request.sortField());
 
-		Pageable pageable = PageRequest.of(0, size + 1, sort);
-		Long cursorLong = null;
-		if (cursor instanceof Long) {
-			cursorLong = (Long)cursor;
-		} else if (cursor instanceof String) {
-			try {
-				cursorLong = Long.valueOf((String)cursor);
-			} catch (NumberFormatException e) {
-				cursorLong = null;
-			}
-		}
+    Pageable pageable = PageRequest.of(0, request.size() + 1, sort);
 
-		List<Employee> employees = employeeRepository.findEmployeesWithAdvancedFilters(
-			nameOrEmail, employeeNumber, departmentName, position, hireDateFrom,
-			hireDateTo, status, idAfter, cursorLong, pageable);
-		boolean hasNext = false;
-		if (employees.size() > size) {
-			hasNext = true;
-			employees = employees.subList(0, size);
-		}
+    List<Employee> employees = getEmployees(request, pageable);
 
-		Long nextIdAfter = hasNext ? employees.get(employees.size() - 1).getId() : null;
+    boolean hasNext = false;
+    if (employees.size() > request.size()) {
+      hasNext = true;
+      employees = employees.subList(0, request.size());
+    }
 
-		Long nextCursor = hasNext ? employees.get(employees.size() - 1).getId() : null;
+    Long totalElements = employeeRepository.getCount(
+        request.nameOrEmail(),
+        request.departmentName(),
+        request.position(),
+        request.status()
+    );
 
-		List<EmployeeDto> employeeDtos = employees.stream()
-			.map(employeeMapper::employeeToDto)
-			.collect(Collectors.toList());
+    Long nextIdAfter = null;
+    String nextCursor = null;
+    if (!employees.isEmpty()) {
+      Employee lastEmployee = employees.get(employees.size() - 1);
+      nextIdAfter = lastEmployee.getId();
 
-		return new CursorPageResponseEmployeeDto(
-			employeeDtos,
-			nextCursor != null ? nextCursor.toString() : null,
-			nextIdAfter, size, employeeRepository.count(), hasNext
-		);
-	}
+      if (request.sortField().equals("hireDate")) {
+        nextCursor = lastEmployee.getHireDate().toString();
+      } else if (request.sortField().equals("employeeNumber")) {
+        nextCursor = lastEmployee.getEmployeeNumber();
+      } else if (request.sortField().equals("name")) {
+        nextCursor = lastEmployee.getName();
+      }
+    }
 
-	@Override
-	@Transactional(readOnly = true)
-	public List<EmployeeDto> getEmployeeAllList() {
-		List<Employee> find = employeeRepository.findAll();
-		return find.stream()
-			.map(employeeMapper::employeeToDto)
-			.toList();
-	}
+    List<EmployeeDto> employeeDtos = employees.stream()
+        .map(employeeMapper::employeeToDto)
+        .collect(Collectors.toList());
 
-	@Override
-	@Transactional
-	public boolean deleteEmployee(Long id, String ipAddress) {
-		if (employeeRepository.existsById(id)) {
+    return new CursorPageResponseEmployeeDto(
+        employeeDtos,
+        nextCursor,
+        nextIdAfter,
+        request.size(),
+        totalElements,
+        hasNext
+    );
+  }
 
-			Employee employee = employeeRepository.findById(id).get();
-			fileServiceInterface.deleteFile(employee.getFile());
-			employee.getDepartment().decreaseCount();
-			employeeRepository.deleteById(id);
-			this.updateTime = Instant.now();
-			//로그작업
+  private List<Employee> getEmployees(CursorPageRequestEmployeeDto request, Pageable pageable) {
+    List<Employee> employees = null;
 
-			log.info("이벤트 발행시작...");
-			changeLogServiceInterface.createChangeLog(
-				ChangeLogType.DELETED, employee.getEmployeeNumber(), "직원 삭제", ipAddress,
-				employeeMapper.employeeToDto(employee), null
-			);
-			log.info("change-logs 생성 완료");
+    if (request.sortField().equals("hireDate")) {
+      if ("desc".equalsIgnoreCase(request.sortDirection())) {
+        employees = employeeRepository.findEmployeesWithHireDateDesc(
+            request.nameOrEmail(),
+            request.departmentName(),
+            request.position(),
+            request.status(),
+            LocalDate.parse(request.cursor()),
+            request.idAfter(),
+            pageable
+        );
+      } else if ("asc".equalsIgnoreCase(request.sortDirection())) {
+        employees = employeeRepository.findEmployeesWithHireDateAsc(
+            request.nameOrEmail(),
+            request.departmentName(),
+            request.position(),
+            request.status(),
+            LocalDate.parse(request.cursor()),
+            request.idAfter(),
+            pageable
+        );
+      }
+    } else if (request.sortField().equals("employeeNumber")) {
+      if ("desc".equalsIgnoreCase(request.sortDirection())) {
+        employees = employeeRepository.findEmployeesWithEmployeeNumberDesc(
+            request.nameOrEmail(),
+            request.departmentName(),
+            request.position(),
+            request.status(),
+            request.cursor(),
+            request.idAfter(),
+            pageable
+        );
+      } else if ("asc".equalsIgnoreCase(request.sortDirection())) {
+        employees = employeeRepository.findEmployeesWithEmployeeNumberAsc(
+            request.nameOrEmail(),
+            request.departmentName(),
+            request.position(),
+            request.status(),
+            request.cursor(),
+            request.idAfter(),
+            pageable
+        );
+      }
+    } else if (request.sortField().equals("name")) {
+      if ("desc".equalsIgnoreCase(request.sortDirection())) {
+        employees = employeeRepository.findEmployeesWithNameDesc(
+            request.nameOrEmail(),
+            request.departmentName(),
+            request.position(),
+            request.status(),
+            request.cursor(),
+            request.idAfter(),
+            pageable
+        );
+      } else if ("asc".equalsIgnoreCase(request.sortDirection())) {
+        employees = employeeRepository.findEmployeesWithNameAsc(
+            request.nameOrEmail(),
+            request.departmentName(),
+            request.position(),
+            request.status(),
+            request.cursor(),
+            request.idAfter(),
+            pageable
+        );
+      }
 
-			return true;
-		}
-		return false;
-	}
+    }
+    return employees;
+  }
 
-	@Override
-	@Transactional
-	public EmployeeDto updateEmployee(Long id, EmployeeUpdateRequest employeeUpdateRequest,
-		MultipartFile profileImg, String ipAddress) throws
-		IOException {
+  @Override
+  @Transactional(readOnly = true)
+  public List<EmployeeDto> getEmployeeAllList() {
+    List<Employee> find = employeeRepository.findAll();
+    return find.stream()
+        .map(employeeMapper::employeeToDto)
+        .toList();
+  }
 
-		Employee employee = employeeRepository.findById(id)
-			.orElseThrow(() -> new NoSuchElementException("Message with id " + id + " not found"));
-		File file = null;
+  @Override
+  @Transactional
+  public boolean deleteEmployee(Long id, String ipAddress) {
+    if (employeeRepository.existsById(id)) {
 
-		EmployeeDto newEmployee = employeeMapper.employeeToDto(employee);
+      Employee employee = employeeRepository.findById(id).get();
+      fileServiceInterface.deleteFile(employee.getFile());
+      employee.getDepartment().decreaseCount();
+      employeeRepository.deleteById(id);
+      this.updateTime = Instant.now();
+      //로그작업
 
-		Department usingDepartment = departmentServiceInterface.findDepartmentEntityById(
-			employeeUpdateRequest.departmentId());
-		if (usingDepartment == null) {
-			throw new NoSuchElementException("Department 아이디가 존재하지 않음");
-		}
-		EmployeeStatus status = EmployeeStatus.valueOf(employeeUpdateRequest.status().toUpperCase());
+      log.info("이벤트 발행시작...");
+      changeLogServiceInterface.createChangeLog(
+          ChangeLogType.DELETED, employee.getEmployeeNumber(), "직원 삭제", ipAddress,
+          employeeMapper.employeeToDto(employee), null
+      );
+      log.info("change-logs 생성 완료");
 
-		employee.getDepartment().decreaseCount();
+      return true;
+    }
+    return false;
+  }
 
-		employee.updateName(employeeUpdateRequest.name());
-		employee.updateEmail(employeeUpdateRequest.email());
-		employee.updateDepartment(usingDepartment);
-		employee.updatePosition(employeeUpdateRequest.position());
-		employee.updateHireDateFrom(employeeUpdateRequest.hireDate());
-		employee.updateStatus(status);
+  @Override
+  @Transactional
+  public EmployeeDto updateEmployee(Long id, EmployeeUpdateRequest employeeUpdateRequest,
+      MultipartFile profileImg, String ipAddress) throws
+      IOException {
 
-		if (profileImg != null) {
-			if (employee.getFile() != null) {
-				File oldFile = fileServiceInterface.findById(employee.getFile().getId());
-				employee.updateFile(null);
-				fileServiceInterface.deleteFile(oldFile);
-			}
-			file = fileServiceInterface.createImgFile(profileImg);
-			employee.updateFile(file);
-		} else {
-			employee.updateFile(file);
-		}
-		employee.getDepartment().increaseCount();
+    Employee employee = employeeRepository.findById(id)
+        .orElseThrow(() -> new NoSuchElementException("Message with id " + id + " not found"));
+    File file = null;
 
-		updateTime = Instant.now();
+    EmployeeDto newEmployee = employeeMapper.employeeToDto(employee);
 
-		EmployeeDto afterEmployee = employeeMapper.employeeToDto(employee);
+    Department usingDepartment = departmentServiceInterface.findDepartmentEntityById(
+        employeeUpdateRequest.departmentId());
+    if (usingDepartment == null) {
+      throw new NoSuchElementException("Department 아이디가 존재하지 않음");
+    }
+    EmployeeStatus status = EmployeeStatus.valueOf(employeeUpdateRequest.status().toUpperCase());
 
-		String memo;
-		if (employeeUpdateRequest.memo() == null) {
-			memo = "직원 수정";
-		} else {
-			memo = employeeUpdateRequest.memo();
-		}
+    employee.getDepartment().decreaseCount();
 
-		log.info("Change-logs 생성중...");
-		changeLogServiceInterface.createChangeLog(
-			ChangeLogType.UPDATED, employee.getEmployeeNumber(), memo, ipAddress,
-			newEmployee, afterEmployee
+    employee.updateName(employeeUpdateRequest.name());
+    employee.updateEmail(employeeUpdateRequest.email());
+    employee.updateDepartment(usingDepartment);
+    employee.updatePosition(employeeUpdateRequest.position());
+    employee.updateHireDateFrom(employeeUpdateRequest.hireDate());
+    employee.updateStatus(status);
 
-		);
-		log.info("change-logs 생성 완료");
+    if (profileImg != null) {
+      if (employee.getFile() != null) {
+        File oldFile = fileServiceInterface.findById(employee.getFile().getId());
+        employee.updateFile(null);
+        fileServiceInterface.deleteFile(oldFile);
+      }
+      file = fileServiceInterface.createImgFile(profileImg);
+      employee.updateFile(file);
+    } else {
+      employee.updateFile(file);
+    }
+    employee.getDepartment().increaseCount();
 
-		return employeeMapper.employeeToDto(employee);
-	}
+    updateTime = Instant.now();
 
-	@Override
-	@Transactional(readOnly = true)
-	public List<EmployeeTrendDto> getEmployeeTrend(LocalDate startedAt, LocalDate endedAt, String gap) {
+    EmployeeDto afterEmployee = employeeMapper.employeeToDto(employee);
 
-		List<Object[]> results = employeeRepository.findEmployeeTrend(startedAt, endedAt, gap);
-		List<EmployeeTrendDto> trendList = new ArrayList<>();
-		Long previousCount = null;
+    String memo;
+    if (employeeUpdateRequest.memo() == null) {
+      memo = "직원 수정";
+    } else {
+      memo = employeeUpdateRequest.memo();
+    }
 
-		for (Object[] result : results) {
-			Instant periodDate;
+    log.info("Change-logs 생성중...");
+    changeLogServiceInterface.createChangeLog(
+        ChangeLogType.UPDATED, employee.getEmployeeNumber(), memo, ipAddress,
+        newEmployee, afterEmployee
 
-			if (result[0] instanceof Timestamp) {
-				periodDate = ((Timestamp)result[0]).toInstant();
-			} else if (result[0] instanceof LocalDate) {
-				periodDate = ((LocalDate)result[0]).atStartOfDay(ZoneOffset.UTC).toInstant();
-			} else {
-				periodDate = (Instant)result[0];
-			}
+    );
+    log.info("change-logs 생성 완료");
 
-			Long count = ((Number)result[1]).longValue();
-			Long change = (previousCount == null) ? 0L : count - previousCount;
-			Double changeRate = (previousCount == null || previousCount == 0L) ? 0.0 : (double)change / previousCount;
+    return employeeMapper.employeeToDto(employee);
+  }
 
-			trendList.add(new EmployeeTrendDto(periodDate, count, change, changeRate));
-			previousCount = count;
-		}
-		return trendList;
-	}
+  @Override
+  @Transactional(readOnly = true)
+  public List<EmployeeTrendDto> getEmployeeTrend(LocalDate startedAt, LocalDate endedAt,
+      String gap) {
 
-	@Override
-	@Transactional(readOnly = true)
-	public List<EmployeeDistributionDto> getEmployeeDistributaion(String groupBy, String status) {
+    List<EmployeeTrendDto> list = new ArrayList<>();
+    LocalDate fromDate = LocalDate.of(1970, 1, 1); //POSIX 시간
 
-		if (groupBy.equals("position")) {
-			return convertDistributionPosition(status);
-		} else if (groupBy.equals("department")) {
-			return convertDistributionDepartment(status);
-		} else {
-			return convertDistributionDepartment(status);
-		}
-	}
+    int beforeCount = employeeRepository.countEmployees(EmployeeStatus.ACTIVE, fromDate,
+        startedAt);
 
-	@Override
-	@Transactional(readOnly = true)
-	public Long countEmployee(String status, LocalDate startedAt, LocalDate endedAt) {
-		boolean isValidStatus = Arrays.stream(EmployeeStatus.values())
-			.anyMatch(e -> e.name().equalsIgnoreCase(status));
-		EmployeeStatus findStatus = null;
-		if (!isValidStatus) {
-			findStatus = EmployeeStatus.ACTIVE;
-		} else
-			findStatus = EmployeeStatus.valueOf(status.toUpperCase());
-		return employeeRepository.countByStatusAndHireDateBetween(findStatus, startedAt, endedAt);
-	}
+    list.add(new EmployeeTrendDto(startedAt, beforeCount, 0, 0.0));
 
-	private List<EmployeeDistributionDto> convertDistributionPosition(String status) {
-		List<EmployeeDistributionDto> distribution = new ArrayList<>();
-		List<Object[]> results = employeeRepository.findDistributionPosition(
-			EmployeeStatus.valueOf(status.toUpperCase()));
-		for (Object[] row : results) {
-			String positionName = (String)row[0];
-			Long totalEmployees = (Long)row[1];
-			Long activeEmployees = (Long)row[2];
-			double ratio = (activeEmployees == 0) ? 0.0 : ((double)totalEmployees * 100 / activeEmployees);
-			distribution.add(new EmployeeDistributionDto(positionName, totalEmployees,
-				ratio));
-		}
-		return distribution;
-	}
+    while (!startedAt.isAfter(endedAt)) {
+      LocalDate nextFrom;
 
-	private List<EmployeeDistributionDto> convertDistributionDepartment(String status) {
-		List<EmployeeDistributionDto> distribution = new ArrayList<>();
-		List<Object[]> results = employeeRepository.findDistributionDepartment(
-			EmployeeStatus.valueOf(status.toUpperCase()));
-		for (Object[] row : results) {
-			Long departmentId = (Long)row[0];
-			Long totalEmployees = (Long)row[1];
-			Long activeEmployees = (Long)row[2];
-			double ratio = (activeEmployees == 0) ? 0.0 : ((double)totalEmployees * 100 / activeEmployees);
-			String departmentName = departmentServiceInterface.findDepartmentById(departmentId).name();
-			distribution.add(new EmployeeDistributionDto(departmentName, totalEmployees,
-				ratio));
-		}
-		return distribution;
-	}
+      switch (gap) {
+        case "day":
+          nextFrom = startedAt.plusDays(1);
+          break;
+        case "week":
+          nextFrom = startedAt.plusWeeks(1);
+          break;
+        case "quarter":
+          nextFrom = startedAt.plusMonths(3);
+          break;
+        case "year":
+          nextFrom = startedAt.plusYears(1);
+          break;
+        case "month":
+        default:
+          nextFrom = startedAt.plusMonths(1);
+          break;
+      }
 
-	@Override
-	public Instant getUpdateTime() {
-		return updateTime;
-	}
+      Integer activeCount = employeeRepository.countEmployees(EmployeeStatus.ACTIVE,
+          fromDate, nextFrom);
+      Integer onLeaveCount = employeeRepository.countEmployees(EmployeeStatus.ON_LEAVE,
+          fromDate, nextFrom);
 
-	private Page<Employee> getEmployees(
-		String nameOrEmail, String employeeNumber, String departmentName, String position,
-		LocalDate hireDateFrom, LocalDate hireDateTo, EmployeeStatus status,
-		LocalDate cursorHireDate, Long cursorId, Pageable pageable, String sortDirection) {
+      int count =
+          (activeCount != null ? activeCount : 0) + (onLeaveCount != null ? onLeaveCount : 0);
+      int change = count - beforeCount;
+      double percentage = calculatePercentage(count, change, beforeCount);
 
-		if (sortDirection.equalsIgnoreCase("asc")) {
-			return employeeRepository.findEmployeesByCursorOrderByIdAsc(
-				nameOrEmail, employeeNumber, departmentName, position,
-				hireDateFrom, hireDateTo, status, cursorHireDate, cursorId, pageable
-			);
-		} else {
-			return employeeRepository.findEmployeesByCursorOrderByIdDesc(
-				nameOrEmail, employeeNumber, departmentName, position,
-				hireDateFrom, hireDateTo, status, cursorHireDate, cursorId, pageable
-			);
-		}
-	}
+      percentage = Math.floor(percentage * 10) / 10;
 
-	@Transactional(readOnly = true)
-	@Override
-	public Stream<EmployeeDto> getEmployeeStream() {
-		return employeeRepository.findAllEmployeesStream();
-	}
+      list.add(new EmployeeTrendDto(nextFrom, Math.abs(count), change, percentage));
+
+      beforeCount = count;
+      startedAt = nextFrom;
+    }
+    list.remove(list.size() - 1);
+
+    return list;
+  }
+
+  private double calculatePercentage(int count, int change, int beforeCount) {
+    if (beforeCount == 0) {
+      return count > 0 ? 100.0 : 0.0;
+    }
+    return ((double) change / beforeCount) * 100.0;
+  }
+
+  @Override
+  @Transactional(readOnly = true)
+  public List<EmployeeDistributionDto> getEmployeeDistributaion(String groupBy, String status) {
+
+    if (groupBy.equals("position")) {
+      return convertDistributionPosition(status);
+    } else if (groupBy.equals("department")) {
+      return convertDistributionDepartment(status);
+    } else {
+      return convertDistributionDepartment(status);
+    }
+  }
+
+  @Override
+  @Transactional(readOnly = true)
+  public Long countEmployee(String status, LocalDate startedAt, LocalDate endedAt) {
+    boolean isValidStatus = Arrays.stream(EmployeeStatus.values())
+        .anyMatch(e -> e.name().equalsIgnoreCase(status));
+    EmployeeStatus findStatus = null;
+    if (!isValidStatus) {
+      findStatus = EmployeeStatus.ACTIVE;
+    } else {
+      findStatus = EmployeeStatus.valueOf(status.toUpperCase());
+    }
+    return employeeRepository.countByStatusAndHireDateBetween(findStatus, startedAt, endedAt);
+  }
+
+  private List<EmployeeDistributionDto> convertDistributionPosition(String status) {
+    List<EmployeeDistributionDto> distribution = new ArrayList<>();
+    List<Object[]> results = employeeRepository.findDistributionPosition(
+        EmployeeStatus.valueOf(status.toUpperCase()));
+    for (Object[] row : results) {
+      String positionName = (String) row[0];
+      Long totalEmployees = (Long) row[1];
+      Long activeEmployees = (Long) row[2];
+      double ratio =
+          (activeEmployees == 0) ? 0.0 : (((double) activeEmployees * 100) / totalEmployees);
+      distribution.add(new EmployeeDistributionDto(positionName, totalEmployees,
+          ratio));
+    }
+    return distribution;
+  }
+
+  private List<EmployeeDistributionDto> convertDistributionDepartment(String status) {
+    List<EmployeeDistributionDto> distribution = new ArrayList<>();
+    List<Object[]> results = employeeRepository.findDistributionDepartment(
+        EmployeeStatus.valueOf(status.toUpperCase()));
+    for (Object[] row : results) {
+      Long departmentId = (Long) row[0];
+      Long totalEmployees = (Long) row[1];
+      Long activeEmployees = (Long) row[2];
+      double ratio =
+          (activeEmployees == 0) ? 0.0 : (((double) activeEmployees * 100) / totalEmployees);
+      String departmentName = departmentServiceInterface.findDepartmentById(departmentId).name();
+      distribution.add(new EmployeeDistributionDto(departmentName, totalEmployees,
+          ratio));
+    }
+    return distribution;
+  }
+
+  @Override
+  public Instant getUpdateTime() {
+    return updateTime;
+  }
+
+  @Transactional(readOnly = true)
+  @Override
+  public Stream<EmployeeDto> getEmployeeStream() {
+    return employeeRepository.findAllEmployeesStream();
+  }
 }
